# pingward

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  codecov.yml  deny.toml  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
assets/: app.css
docs/superpowers/plans/: 2026-07-12-pingward-auth-web-ui.md  2026-07-12-pingward-monitoring-core.md  2026-07-12-pingward-nag-renotifications.md  2026-07-12-pingward-notification-channels.md  2026-07-12-pingward-postgresql-parity.md  2026-07-12-pingward-started-never-finished.md  2026-07-13-email-smtp-channel.md  2026-07-13-pingward-retention-pruning.md  2026-07-13-test-notification-and-history.md  2026-07-14-admin-followups.md  2026-07-14-admin-plan1-foundation-cross-user.md  2026-07-14-admin-plan2-user-management.md  2026-07-14-admin-plan3-dashboard.md  2026-07-14-ui-redesign.md  2026-07-15-authz-boundaries-e2e.md  2026-07-15-core-monitoring-e2e.md  2026-07-15-e2e-testing-harness.md
docs/superpowers/specs/: 2026-07-12-pingward-design.md  2026-07-12-pingward-nag-renotifications-design.md  2026-07-13-email-smtp-channel-design.md  2026-07-13-pingward-retention-pruning-design.md  2026-07-13-test-notification-and-history-design.md  2026-07-14-admin-features-design.md  2026-07-14-admin-followups-design.md  2026-07-14-ui-redesign-design.md  2026-07-15-authz-boundaries-e2e-design.md  2026-07-15-core-monitoring-e2e-design.md  2026-07-15-e2e-testing-harness-design.md
e2e/: .gitignore  global-setup.js  package-lock.json  package.json  playwright.config.js
e2e/features/: account.feature  admin.feature  api_keys.feature  assets.feature  auth.feature  authz.feature  check_create.feature  check_history.feature  edit_flows.feature  live_tail.feature  mobile_layout.feature  monitoring.feature  notifications.feature  ping_kinds.feature  settings.feature  theme.feature  time_states.feature  users.feature  validation.feature
e2e/screenshots/: capture.mjs  render-icon.mjs  seed.mjs
e2e/steps/: account.steps.js  admin.steps.js  api_keys.steps.js  assets.steps.js  auth.steps.js  authz.steps.js  check_create.steps.js  check_history.steps.js  edit_flows.steps.js  live_tail.steps.js  mobile_layout.steps.js  monitoring.steps.js  notifications.steps.js  ping_kinds.steps.js  settings.steps.js  theme.steps.js  time_states.steps.js  users.steps.js  validation.steps.js
e2e/support/: actions.js  api.js  fixtures.js  mock-http.js  server.js
migrations/postgres/: 0001_init.sql  0003_max_runtime.sql  0004_nag.sql  0005_user_disabled.sql  0006_audit_log.sql  0009_api_keys.sql  0010_session_metadata.sql  0013_session_sso.sql
migrations/sqlite/: 0001_init.sql  0002_indexes.sql  0003_max_runtime.sql  0004_nag.sql  0005_user_disabled.sql  0006_audit_log.sql  0008_ping_history_index.sql  0009_api_keys.sql  0011_descriptions.sql  0012_session_secret.sql  0013_session_sso.sql
src/: apikey.rs  assets.rs  auth.rs  config.rs  db.rs  duration.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  notify.rs  ping.rs  prune.rs  scheduler.rs  secret.rs  shutdown.rs  state.rs  store.rs  view.rs  web.rs
src/api/: dto.rs  error.rs  extract.rs  input.rs  mod.rs  v1.rs
templates/: account.html  admin.html  admin_dashboard.html  admin_projects.html  api_keys.html  base.html  channel_form.html  check.html  check_form.html  check_notifs.html  check_pings.html  dashboard.html  login.html  project.html  project_form.html  settings.html  setup.html  users.html
tests/: account_web.rs  admin.rs  admin_dashboard.rs  admin_env.rs  api_keys_web.rs  api_v1.rs  api_v1_write.rs  assets.rs  auth_web.rs  check_detail.rs  csrf.rs  dashboard_view.rs  form_names.rs  forms_view.rs  forward_auth_web.rs  pg_store.rs  ping_api.rs  ping_source_ip.rs  project_view.rs  scheduler.rs  smtp_e2e.rs  sse.rs  users_admin.rs  web_ownership.rs
tests/common/: mod.rs
