[package]
name = "pingward"
version = "0.1.0"
edition = "2021"

[lib]
name = "pingward"
path = "src/lib.rs"

[[bin]]
name = "pingward"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5", features = ["rand"] }
askama = "0.16"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie", "form"] }
form_urlencoded = "1.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls-aws-lc-rs", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.17"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
thiserror = "2"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
axum-test = "21"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }

# Release profile tuned for a smaller, faster binary (the published Docker
# image builds in release). LTO + a single codegen unit let the optimizer work
# across crate boundaries; `strip` drops debug symbols. Trades longer compile
# time for size — acceptable for release/image builds, not dev.
[profile.release]
lto = true
codegen-units = 1
strip = true
