[package]
name = "pingward"
version = "0.1.0"
edition = "2021"

[lib]
name = "pingward"
path = "src/lib.rs"

[[bin]]
name = "pingward"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5", features = ["rand"] }
askama = "0.16"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie", "form"] }
form_urlencoded = "1.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls-aws-lc-rs", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.17"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
thiserror = "2"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["chrono", "axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
axum-test = "21"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }

# Lints encoded in-manifest so `cargo build`/`cargo clippy` and IDEs apply them
# without extra flags (CI additionally runs `clippy --all-targets -- -D warnings`,
# which promotes every one of these warnings to a hard error). Kept in sync with
# the sibling `noadd` project's curated set so both repos enforce the same rules.
# Source: Embark Studios' rust-ecosystem lint list (as vendored by noadd).
# https://github.com/EmbarkStudios/rust-ecosystem/blob/732513edfd9172f4eda358b2d0cefc6cad1585ee/lints.rs
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# Release profile tuned for a smaller, faster binary (the published Docker
# image builds in release). LTO + a single codegen unit let the optimizer work
# across crate boundaries; `strip` drops debug symbols. Trades longer compile
# time for size — acceptable for release/image builds, not dev.
[profile.release]
lto = true
codegen-units = 1
strip = true
