[package]
name = "pingward"
version = "0.1.0"
edition = "2024"

[lib]
name = "pingward"
path = "src/lib.rs"

[[bin]]
name = "pingward"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5", features = ["rand"] }
askama = "0.16"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie", "form"] }
form_urlencoded = "1.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# `macros` is required for `sqlx::migrate!`, which embeds the migration SQL in
# the binary (see src/db.rs) — the runtime must not depend on `migrations/`
# existing on disk.
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls-aws-lc-rs", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.17"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mimalloc = "0.1"
thiserror = "2"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["chrono", "axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
axum-test = "21"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
tower = { version = "0.5", default-features = false, features = ["util"] }

# Lints encoded in-manifest so `cargo build`/`cargo clippy` and IDEs apply them
# without extra flags (CI additionally runs `clippy --all-targets -- -D warnings`,
# which promotes every one of these warnings to a hard error). Kept in sync with
# the sibling `noadd` project's curated set so both repos enforce the same rules.
# Self-maintained lint set (originally seeded from Embark Studios' rust-ecosystem
# list). The bulk of the old itemised pedantic lints are now covered by the
# `pedantic` group; only the noisy/low-signal ones are opted back out, plus the
# restriction and nursery lints that have no safe umbrella group.
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
# Groups (priority -1 so the individual entries below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Opt out of the noisy / low-signal pedantic lints.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
duration_suboptimal_units = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# Restriction lints (no safe umbrella group — kept itemised).
dbg_macro = "warn"
exit = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"

# Nursery picks (the nursery group as a whole is too unstable to enable).
debug_assert_with_mut_call = "warn"
fallible_impl_from = "warn"
trait_duplication_in_bounds = "warn"

# Release profile tuned for a smaller, faster binary (the published Docker
# image builds in release). LTO + a single codegen unit let the optimizer work
# across crate boundaries; `strip` drops debug symbols. Trades longer compile
# time for size — acceptable for release/image builds, not dev.
[profile.release]
lto = true
codegen-units = 1
strip = true
